Последний вариант на 29-04

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <!--Если писать <a href="/"> выкидывает на диск С-->
-        <a href="index.html">Web Studio</a>
+        <a href="#">Web Studio</a>
 
         <ul>
           <li><a href="">Студия</a></li>
@@ -42,6 +42,7 @@
         </ul>
       </nav>
     </header>
+    <!-- Основное содержание -->
     <main>
       <!-- Герой -->
       <section>
@@ -61,9 +62,9 @@
               width="70"
             />
             <a href=""
-              ><img src="./images/rectangle-1.svg" alt="Фон" width="278"
+              ><img src="./images/rectangle.svg" alt="Фон" width="278"
             /></a>
-            <h3>Внимание к деталям</h3>
+            <p>Внимание к деталям</p>
 
             <p>
               Идейные соображения, а также начало повседневной работы по
@@ -73,9 +74,9 @@
           <li>
             <img src="./images/clock-1.svg" alt="Пунктуальность" width="70" />
             <a href=""
-              ><img src="./images/rectangle-2.svg" alt="Фон" width="278"
+              ><img src="./images/rectangle.svg" alt="Фон" width="278"
             /></a>
-            <h3>Пунктуальность</h3>
+            <p>Пунктуальность</p>
 
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
@@ -85,9 +86,9 @@
           <li>
             <img src="./images/diagram-1.svg" alt="Планирование" width="70" />
             <a href=""
-              ><img src="./images/rectangle-3.svg" alt="Фон" width="278"
+              ><img src="./images/rectangle.svg" alt="Фон" width="278"
             /></a>
-            <h3>Планирование</h3>
+            <p>Планирование</p>
 
             <p>
               Равным образом консультация с широким активом в значительной
@@ -101,9 +102,9 @@
               width="70"
             />
             <a href=""
-              ><img src="./images/rectangle-4.svg" alt="Фон" width="278"
+              ><img src="./images/rectangle.svg" alt="Фон" width="278"
             /></a>
-            <h3>Современные технологии</h3>
+            <p>Современные технологии</p>
 
             <p>
               Значимость этих проблем настолько очевидна, что реализация
@@ -157,30 +158,40 @@
             />
             <h3>John Smith</h3>
             <p>Product Designer</p>
-            <a href=""
-              ><img
-                src="./images/instagram-logo.svg"
-                alt="Инстаграмм Джона Смита"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/twitter-logo.svg"
-                alt="Твиттер Джона Смита"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/facebook-logo.svg"
-                alt="Фейсбук Джона Смита"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/linkedin-logo.svg"
-                alt="Линкедин Джона Смита"
-                width="20"
-            /></a>
+            <ul>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/instagram-logo.svg"
+                    alt="Инстаграмм Джона Смита"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/twitter-logo.svg"
+                    alt="Твиттер Джона Смита"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/facebook-logo.svg"
+                    alt="Фейсбук Джона Смита"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/linkedin-logo.svg"
+                    alt="Линкедин Джона Смита"
+                    width="20"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <img
@@ -190,30 +201,40 @@
             />
             <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
-            <a href=""
-              ><img
-                src="./images/instagram-logo.svg"
-                alt="Инстаграмм Марты Стюарт"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/twitter-logo.svg"
-                alt="Твиттер Марты Стюарт"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/facebook-logo.svg"
-                alt="Фейсбук Марты Стюарт"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/linkedin-logo.svg"
-                alt="Линкедин Марты Стюарт"
-                width="20"
-            /></a>
+            <ul>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/instagram-logo.svg"
+                    alt="Инстаграмм Марты Стюарт"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/twitter-logo.svg"
+                    alt="Твиттер Марты Стюарт"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/facebook-logo.svg"
+                    alt="Фейсбук Марты Стюарт"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/linkedin-logo.svg"
+                    alt="Линкедин Марты Стюарт"
+                    width="20"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
             <img
@@ -223,33 +244,101 @@
             />
             <h3>Robert Jakis</h3>
             <p>Marketing</p>
-            <a href=""
-              ><img
-                src="./images/instagram-logo.svg"
-                alt="Инстаграмм Роберта Якиса"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/twitter-logo.svg"
-                alt="Твиттер Роберта Якиса"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/facebook-logo.svg"
-                alt="Фейсбук Роберта Якиса"
-                width="20"
-            /></a>
-            <a href=""
-              ><img
-                src="./images/linkedin-logo.svg"
-                alt="Линкедин Роберта Якиса"
-                width="20"
-            /></a>
+            <ul>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/instagram-logo.svg"
+                    alt="Инстаграмм Роберта Якиса"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/twitter-logo.svg"
+                    alt="Твиттер Роберта Якиса"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/facebook-logo.svg"
+                    alt="Фейсбук Роберта Якиса"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/linkedin-logo.svg"
+                    alt="Линкедин Роберта Якиса"
+                    width="20"
+                /></a>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
+      <!-- Постоянные клиенты -->
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img src="./images/client-1.svg" alt="YA & CO" width="175"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/client-2.svg"
+                alt="Company Tagline here"
+                width="175"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/client-3.svg" alt="Company" width="175"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/client-4.svg" alt="Foster Peters" width="175"
+            /></a>
+          </li>
+          <li><a href=""><img src="./images/client-5.svg" alt="Brand" width="175" /></a></li>
+          <li><a href=""><img src="./images/client-6.svg" alt="Company Tag line" width="175" /></a></li>
+        </ul>
+      </section>
     </main>
+    <!-- Футер -->
+    <footer>
+<h2>Web Studio</h2>
+<ul>
+    <li><a href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+    <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
+    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+</ul>
+<p>присоединяйтесь</p>
+<ul>
+  <li>
+    <a href=""><img src="./images/ellipse.svg" alt="Ссылка на инстаграмм" width="44" /><img src="./images/instagram-logo.svg" alt="Инстаграмм" width="20" /></a>
+  </li>
+  <li>
+    <a href=""><img src="./images/ellipse.svg" alt="Ссылка на твиттер" width="44" /><img src="./images/twitter-logo.svg" alt="Твиттер" width="20" /></a>
+  </li>
+  <li>
+    <a href=""><img src="./images/ellipse.svg" alt="Ссылка на фейсбук" width="44" /><img src="./images/facebook-logo.svg" alt="Фейсбук" width="20" /></a>
+  </li>
+  <li>
+    <a href=""><img src="./images/ellipse.svg" alt="Ссылка на линкедин" width="44" /><img src="./images/linkedin-logo.svg" alt="Линкедин" width="20" /></a>
+  </li>
+</ul>
+<p>подписаться на рассылку</p>
+<a href="">Подписаться</a>
+<p>2020 | Developed by GoIT Students</p>
+    </footer>
   </body>
 </html>
