Убрала фон в преимуществах

--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
         <h2>Преимущества</h2>
         <ul>
           <li>
-            <img
-              src="./images/antenna-1.svg"
-              alt="Внимание к деталям"
-              width="70"
-            />
             <a href=""
-              ><img src="./images/rectangle.svg" alt="Фон" width="278"
+              ><img
+                src="./images/antenna-1.svg"
+                alt="Внимание к деталям"
+                width="70"
             /></a>
             <p>Внимание к деталям</p>
 
@@ -72,9 +70,8 @@
             </p>
           </li>
           <li>
-            <img src="./images/clock-1.svg" alt="Пунктуальность" width="70" />
             <a href=""
-              ><img src="./images/rectangle.svg" alt="Фон" width="278"
+              ><img src="./images/clock-1.svg" alt="Пунктуальность" width="70"
             /></a>
             <p>Пунктуальность</p>
 
@@ -84,9 +81,8 @@
             </p>
           </li>
           <li>
-            <img src="./images/diagram-1.svg" alt="Планирование" width="70" />
             <a href=""
-              ><img src="./images/rectangle.svg" alt="Фон" width="278"
+              ><img src="./images/diagram-1.svg" alt="Планирование" width="70"
             /></a>
             <p>Планирование</p>
 
@@ -96,13 +92,11 @@
             </p>
           </li>
           <li>
-            <img
-              src="./images/astronaut-1.svg"
-              alt="Современные технологии"
-              width="70"
-            />
             <a href=""
-              ><img src="./images/rectangle.svg" alt="Фон" width="278"
+              ><img
+                src="./images/astronaut-1.svg"
+                alt="Современные технологии"
+                width="70"
             /></a>
             <p>Современные технологии</p>
 
@@ -308,37 +302,80 @@
               ><img src="./images/client-4.svg" alt="Foster Peters" width="175"
             /></a>
           </li>
-          <li><a href=""><img src="./images/client-5.svg" alt="Brand" width="175" /></a></li>
-          <li><a href=""><img src="./images/client-6.svg" alt="Company Tag line" width="175" /></a></li>
+          <li>
+            <a href=""
+              ><img src="./images/client-5.svg" alt="Brand" width="175"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="./images/client-6.svg"
+                alt="Company Tag line"
+                width="175"
+            /></a>
+          </li>
         </ul>
       </section>
     </main>
     <!-- Футер -->
     <footer>
-<h2>Web Studio</h2>
-<ul>
-    <li><a href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-    <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
-    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-</ul>
-<p>присоединяйтесь</p>
-<ul>
-  <li>
-    <a href=""><img src="./images/ellipse.svg" alt="Ссылка на инстаграмм" width="44" /><img src="./images/instagram-logo.svg" alt="Инстаграмм" width="20" /></a>
-  </li>
-  <li>
-    <a href=""><img src="./images/ellipse.svg" alt="Ссылка на твиттер" width="44" /><img src="./images/twitter-logo.svg" alt="Твиттер" width="20" /></a>
-  </li>
-  <li>
-    <a href=""><img src="./images/ellipse.svg" alt="Ссылка на фейсбук" width="44" /><img src="./images/facebook-logo.svg" alt="Фейсбук" width="20" /></a>
-  </li>
-  <li>
-    <a href=""><img src="./images/ellipse.svg" alt="Ссылка на линкедин" width="44" /><img src="./images/linkedin-logo.svg" alt="Линкедин" width="20" /></a>
-  </li>
-</ul>
-<p>подписаться на рассылку</p>
-<a href="">Подписаться</a>
-<p>2020 | Developed by GoIT Students</p>
+      <h2>Web Studio</h2>
+      <ul>
+        <li><a href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
+      <p>присоединяйтесь</p>
+      <ul>
+        <li>
+          <a href=""
+            ><img
+              src="./images/ellipse.svg"
+              alt="Ссылка на инстаграмм"
+              width="44"/><img
+              src="./images/instagram-logo.svg"
+              alt="Инстаграмм"
+              width="20"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img
+              src="./images/ellipse.svg"
+              alt="Ссылка на твиттер"
+              width="44"/><img
+              src="./images/twitter-logo.svg"
+              alt="Твиттер"
+              width="20"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img
+              src="./images/ellipse.svg"
+              alt="Ссылка на фейсбук"
+              width="44"/><img
+              src="./images/facebook-logo.svg"
+              alt="Фейсбук"
+              width="20"
+          /></a>
+        </li>
+        <li>
+          <a href=""
+            ><img
+              src="./images/ellipse.svg"
+              alt="Ссылка на линкедин"
+              width="44"/><img
+              src="./images/linkedin-logo.svg"
+              alt="Линкедин"
+              width="20"
+          /></a>
+        </li>
+      </ul>
+      <p>подписаться на рассылку</p>
+      <a href="">Подписаться</a>
+      <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
