Правки ментора на 30-04-2020

--- a/index.html
+++ b/index.html
@@ -18,29 +18,25 @@
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com"
-              ><img
-                src="./images/mail-logo.svg"
-                alt="Отправить письмо"
-                width="16"
-              />info@devstudio.com</a
-            >
-          </li>
-
-          <li>
-            <a href="tel:+380961111111"
-              ><img
-                src="./images/phone-logo.svg"
-                alt="Позвонить"
-                width="10"
-              />+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
       </nav>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com"
+            ><img
+              src="./images/mail-logo.svg"
+              alt="Отправить письмо"
+              width="16"
+            />info@devstudio.com</a
+          >
+        </li>
+
+        <li>
+          <a href="tel:+380961111111"
+            ><img src="./images/phone-logo.svg" alt="Позвонить" width="10" />+38
+            096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
     <!-- Основное содержание -->
     <main>
@@ -320,61 +316,69 @@
     </main>
     <!-- Футер -->
     <footer>
-      <h2>Web Studio</h2>
-      <ul>
-        <li><a href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
-      <p>присоединяйтесь</p>
-      <ul>
-        <li>
-          <a href=""
-            ><img
-              src="./images/ellipse.svg"
-              alt="Ссылка на инстаграмм"
-              width="44"/><img
-              src="./images/instagram-logo.svg"
-              alt="Инстаграмм"
-              width="20"
-          /></a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/ellipse.svg"
-              alt="Ссылка на твиттер"
-              width="44"/><img
-              src="./images/twitter-logo.svg"
-              alt="Твиттер"
-              width="20"
-          /></a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/ellipse.svg"
-              alt="Ссылка на фейсбук"
-              width="44"/><img
-              src="./images/facebook-logo.svg"
-              alt="Фейсбук"
-              width="20"
-          /></a>
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/ellipse.svg"
-              alt="Ссылка на линкедин"
-              width="44"/><img
-              src="./images/linkedin-logo.svg"
-              alt="Линкедин"
-              width="20"
-          /></a>
-        </li>
-      </ul>
-      <p>подписаться на рассылку</p>
-      <a href="">Подписаться</a>
+      <div>
+        <div>
+          <a href="#"><h2>Web Studio</h2></a>
+          <ul>
+            <li><a href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
+            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          </ul>
+        </div>
+        <div>
+          <p>присоединяйтесь</p>
+          <ul>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/ellipse.svg"
+                  alt="Ссылка на инстаграмм"
+                  width="44"/><img
+                  src="./images/instagram-logo.svg"
+                  alt="Инстаграмм"
+                  width="20"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/ellipse.svg"
+                  alt="Ссылка на твиттер"
+                  width="44"/><img
+                  src="./images/twitter-logo.svg"
+                  alt="Твиттер"
+                  width="20"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/ellipse.svg"
+                  alt="Ссылка на фейсбук"
+                  width="44"/><img
+                  src="./images/facebook-logo.svg"
+                  alt="Фейсбук"
+                  width="20"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img
+                  src="./images/ellipse.svg"
+                  alt="Ссылка на линкедин"
+                  width="44"/><img
+                  src="./images/linkedin-logo.svg"
+                  alt="Линкедин"
+                  width="20"
+              /></a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p>подписаться на рассылку</p>
+          <a href="">Подписаться</a>
+        </div>
+      </div>
       <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
