Add Martin Doe and Address

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
       <section>
         <h2>Наша команда</h2>
         <ul>
+          <!-- Джон Смит -->
           <li>
             <img
               src="./images/john-smith-photo.jpg"
@@ -183,6 +184,7 @@
               </li>
             </ul>
           </li>
+          <!-- Марта Стюарт -->
           <li>
             <img
               src="./images/marta-stewart-photo.jpg"
@@ -226,6 +228,7 @@
               </li>
             </ul>
           </li>
+          <!-- Роберт Якис -->
           <li>
             <img
               src="./images/robert-jakis-photo.jpg"
@@ -247,7 +250,7 @@
                 <a href=""
                   ><img
                     src="./images/twitter-logo.svg"
-                    alt="Твиттер Роберта Якиса"
+                    alt="Твиттер Марты Роберта Якиса"
                     width="20"
                 /></a>
               </li>
@@ -255,7 +258,7 @@
                 <a href=""
                   ><img
                     src="./images/facebook-logo.svg"
-                    alt="Фейсбук Роберта Якиса"
+                    alt="Фейсбук Марты Роберта Якиса"
                     width="20"
                 /></a>
               </li>
@@ -263,7 +266,51 @@
                 <a href=""
                   ><img
                     src="./images/linkedin-logo.svg"
-                    alt="Линкедин Роберта Якиса"
+                    alt="Линкедин Марты Роберта Якиса"
+                    width="20"
+                /></a>
+              </li>
+            </ul>
+          </li>
+          <!-- Мартин Доу -->
+          <li>
+            <img
+              src="./images/martin-doe-photo.jpg"
+              alt="Мартин Доу"
+              width="278"
+            />
+            <h3>Martin Doe</h3>
+            <p>UI Designer</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/instagram-logo.svg"
+                    alt="Инстаграмм Мартина Доу"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/twitter-logo.svg"
+                    alt="Твиттер Мартина Доу"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/facebook-logo.svg"
+                    alt="Фейсбук Мартина Доу"
+                    width="20"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./images/linkedin-logo.svg"
+                    alt="Линкедин Мартина Доу"
                     width="20"
                 /></a>
               </li>
@@ -319,11 +366,11 @@
       <div>
         <div>
           <a href="#"><h2>Web Studio</h2></a>
-          <ul>
-            <li><a href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-          </ul>
+          <address>
+            <a href="#">г. Киев, пр-т Леси Украинки, 26</a><br />
+            <a href="mailto:info@devstudio.com">info@example.com</a><br />
+            <a href="tel:+380991111111">+38 099 111 11 11</a><br />
+          </address>
         </div>
         <div>
           <p>присоединяйтесь</p>
@@ -333,7 +380,7 @@
                 ><img
                   src="./images/ellipse.svg"
                   alt="Ссылка на инстаграмм"
-                  width="44"/><img
+                  width="44" /><img
                   src="./images/instagram-logo.svg"
                   alt="Инстаграмм"
                   width="20"
@@ -344,7 +391,7 @@
                 ><img
                   src="./images/ellipse.svg"
                   alt="Ссылка на твиттер"
-                  width="44"/><img
+                  width="44" /><img
                   src="./images/twitter-logo.svg"
                   alt="Твиттер"
                   width="20"
@@ -355,7 +402,7 @@
                 ><img
                   src="./images/ellipse.svg"
                   alt="Ссылка на фейсбук"
-                  width="44"/><img
+                  width="44" /><img
                   src="./images/facebook-logo.svg"
                   alt="Фейсбук"
                   width="20"
@@ -366,7 +413,7 @@
                 ><img
                   src="./images/ellipse.svg"
                   alt="Ссылка на линкедин"
-                  width="44"/><img
+                  width="44" /><img
                   src="./images/linkedin-logo.svg"
                   alt="Линкедин"
                   width="20"
